--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
 
 }
+
+h4{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  text-align:center;
+}
+button{
+  margin-left: 20%
+}
+.bntcls{
+  align-content: center;
+}
